--- a/Overview.html
+++ b/Overview.html
@@ -58,6 +58,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="submissions.html"> Submissions </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Time-off.html"> Time Off </a>
+                        </li>
                     </ul>
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
