--- a/log-in.html
+++ b/log-in.html
@@ -32,7 +32,7 @@
         <nav class="navbar navbar-expand-lg ">
             <!-- Container wrapper -->
             <div class="container-fluid">
-                <a class="navbar-brand" href="overview.html">
+                <a class="navbar-brand" href="Index.html">
                     <img src="../img/Logo.png" alt="Logo" width="300px" height="100px"
                         class="d-inline-block align-text-top">
                 </a>
