--- a/Time-off.html
+++ b/Time-off.html
@@ -32,8 +32,8 @@
         <nav class="navbar navbar-expand-lg ">
             <!-- Container wrapper -->
             <div class="container-fluid">
-                <a class="navbar-brand" href="Index.html">
-                    <img src="../img/Logo.png" alt="Logo" width="300px" height="100px"
+                <a class="navbar-brand" href="Clock-in-&-out.html">
+                    <img src="img/Logo.png" alt="Logo" width="300px" height="100px"
                         class="d-inline-block align-text-top">
                 </a>
                 <!-- Toggle button -->
@@ -50,7 +50,7 @@
                       
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="Index.html">Clock In & Out</a>
+                            <a class="nav-link" href="Clock-in-&-out.html">Clock In & Out</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="past-work-hours.html">  Past Work Hours </a>
@@ -90,7 +90,7 @@
 </div>
 
 <div class="clocks-container">
-    <script type="text/javascript" src="https://c4aba502.caspio.com/dp/5a6ed0007569599deb794aa0a8ab/emb"></script>
+    <script type="text/javascript" src="https://c4aba502.caspio.com/dp/5a6ed00058fd0597c3e94db5bac6/emb"></script>
 </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
