--- a/log-in.html
+++ b/log-in.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Past Work Hours| Fendous Time track</title>
+    <title>Login| Fendous Time track</title>
     
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -32,8 +32,8 @@
         <nav class="navbar navbar-expand-lg ">
             <!-- Container wrapper -->
             <div class="container-fluid">
-                <a class="navbar-brand" href="Index.html">
-                    <img src="../img/Logo.png" alt="Logo" width="300px" height="100px"
+                <a class="navbar-brand" href="Overview.htmls">
+                    <img src="Img/Logo.png" alt="Logo" width="300px" height="100px"
                         class="d-inline-block align-text-top">
                 </a>
                 <!-- Toggle button -->
@@ -82,7 +82,7 @@
   <hr style="border-top: 1px solid rgb(92, 89, 89)" />
   <footer class="custom-footer">
     <div class="footer-text copyright">
-      Copyright © 2023 All rights reserved - Fendous Sustainable Solutions
+      Copyright © 2024 All rights reserved - Fendous Sustainable Solutions
     </div>
   </footer>
 </html>
