--- a/submissions.html
+++ b/submissions.html
@@ -32,8 +32,8 @@
         <nav class="navbar navbar-expand-lg ">
             <!-- Container wrapper -->
             <div class="container-fluid">
-                <a class="navbar-brand" href="Index.html">
-                    <img src="../img/Logo.png" alt="Logo" width="300px" height="100px"
+                <a class="navbar-brand" href="Overview.html">
+                    <img src="img/Logo.png" alt="Logo" width="300px" height="100px"
                         class="d-inline-block align-text-top">
                 </a>
                 <!-- Toggle button -->
@@ -50,7 +50,7 @@
                       
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="Index.html">Clock In & Out</a>
+                            <a class="nav-link" href="Clock-in-&-out.html">Clock In & Out</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="past-work-hours.html">  Past Work Hours </a>
