--- a/Overview.html
+++ b/Overview.html
@@ -28,7 +28,7 @@
     <div class="menu-container">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="Overview.html">
                     <img src="img/Logo.png" alt="Logo" width="300px" height="100px"
                         class="d-inline-block align-text-top">
                 </a>
