--- a/Overview.html
+++ b/Overview.html
@@ -41,7 +41,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarCenteredExample">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="Overview.html">Clock In & Out</a>
+                            <a class="nav-link" href="Overview.html">Clock In & Out</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="past-work-hours.html">Past Work Hours</a>
@@ -80,7 +80,7 @@
                         <i class="fas fa-clock fa-3x mb-3"></i>
                         <h5 class="card-title">Clock In & Out</h5>
                         <p class="card-text">Track your daily work hours with ease</p>
-                        <a href="Overview.html" class="btn btn-primary">Get Started</a>
+                        <a href="Clock-in-&-out.html" class="btn btn-primary">Get Started</a>
                     </div>
                 </div>
             </div>
