created get started page

--- a/log-in.html
+++ b/log-in.html
@@ -46,11 +46,20 @@
                  <!-- Collapsible wrapper -->
                  <div class="collapse navbar-collapse" id="navbarCenteredExample">
                   <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav ms-auto">
+                      <li class="nav-item">
+                        <a class="nav-link" href="log-in.html">Login</a>
+                    </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="get-started.html">Get Started</a>
+                      </li>
+                  </ul>
                       <li class="nav-item">
                           <a class="nav-link" href="https://c4aba502.caspio.com/folderlogout">
                               <i class="fas fa-sign-out-alt me-2"></i>Logout 
                           </a>
                       </li>
+                      
                   </ul>
               </div>
             <!-- Container wrapper -->
