--- a/Overview.html
+++ b/Overview.html
@@ -41,7 +41,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarCenteredExample">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="Overview.html">Clock In & Out</a>
+                            <a class="nav-link" href="Clock-in-&-out.html">Clock In & Out</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="past-work-hours.html">Past Work Hours</a>
