added the profile feature

--- a/Overview.html
+++ b/Overview.html
@@ -55,6 +55,11 @@
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
+                            <a class="nav-link" href="profile.html">
+                                <i class="fas fa-user me-2"></i>Profile
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="https://c4aba502.caspio.com/folderlogout">
                                 <i class="fas fa-sign-out-alt me-2"></i>Logout
                             </a>
