--- a/log-in.html
+++ b/log-in.html
@@ -54,11 +54,11 @@
                         <a class="nav-link" href="get-started.html">Get Started</a>
                       </li>
                   </ul>
-                      <li class="nav-item">
+                     <!-- <li class="nav-item">
                           <a class="nav-link" href="https://c4aba502.caspio.com/folderlogout">
                               <i class="fas fa-sign-out-alt me-2"></i>Logout 
                           </a>
-                      </li>
+                      </li>-->
                       
                   </ul>
               </div>
