--- a/submissions.html
+++ b/submissions.html
@@ -48,7 +48,9 @@
                     <!-- Left links -->
                     <ul class="navbar-nav mb-2 mb-lg-0">
                       
-                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="Overview.html"><i class=" fas fa-home me-2"></i> Home</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="Clock-in-&-out.html">Clock In & Out</a>
                         </li>
@@ -63,6 +65,11 @@
                         </li>
                     </ul>
                         <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="profile.html">
+                                    <i class="fas fa-user me-2"></i>Profile
+                                </a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="https://c4aba502.caspio.com/folderlogout">
                                     <i class="fas fa-sign-out-alt me-2"></i>Logout 
