--- a/profile.html
+++ b/profile.html
@@ -88,7 +88,7 @@
 <div class="overview-header-container">
     <div class="tasks-assigned-container">
         
-        <div class="tasks-assigned-title">Profile</div>
+        <div class="profile-form-container">Profile</div>
         <button onclick="history.back()" class="go-back-button"><i class="fa fa-arrow-circle-left" aria-hidden="true"
                 style="font-size: 15px;"></i>Go Back</button>
        
