button color updated

--- a/Overview.html
+++ b/Overview.html
@@ -85,7 +85,7 @@
                         <i class="fas fa-clock fa-3x mb-3"></i>
                         <h5 class="card-title">Clock In & Out</h5>
                         <p class="card-text">Track your daily work hours with ease</p>
-                        <a href="Clock-in-&-out.html" class="btn btn-primary">Get Started</a>
+                        <a href="Clock-in-&-out.html" class="btn btn-pink">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                         <i class="fas fa-history fa-3x mb-3"></i>
                         <h5 class="card-title">Past Work Hours</h5>
                         <p class="card-text">View and manage your time history</p>
-                        <a href="past-work-hours.html" class="btn btn-primary">View History</a>
+                        <a href="past-work-hours.html" class="btn btn-pink">View History</a>
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                         <i class="fas fa-file-alt fa-3x mb-3"></i>
                         <h5 class="card-title">Submissions</h5>
                         <p class="card-text">Manage your work submissions</p>
-                        <a href="submissions.html" class="btn btn-primary">View Submissions</a>
+                        <a href="submissions.html" class="btn btn-pink">View Submissions</a>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                         <i class="fas fa-calendar-alt fa-3x mb-3"></i>
                         <h5 class="card-title">Time Off</h5>
                         <p class="card-text">Request and manage your time off</p>
-                        <a href="Time-off.html" class="btn btn-primary">Manage Time Off</a>
+                        <a href="Time-off.html" class="btn btn-pink">Manage Time Off</a>
                     </div>
                 </div>
             </div>
