Added "past-time-off" page

--- a/Overview.html
+++ b/Overview.html
@@ -50,7 +50,10 @@
                             <a class="nav-link" href="submissions.html">Submissions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Time-off.html">Time Off</a>
+                            <a class="nav-link" href="Time-off.html">Time-Off</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Past-Time-off.html">Past Time-Off</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
@@ -118,7 +121,18 @@
                         <i class="fas fa-calendar-alt fa-3x mb-3"></i>
                         <h5 class="card-title">Time Off</h5>
                         <p class="card-text">Request and manage your time off</p>
-                        <a href="Time-off.html" class="btn btn-pink">Manage Time Off</a>
+                        <a href="Time-off.html" class="btn btn-pink">Manage Time-Off</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 mb-4">
+                <div class="card h-100">
+                    <div class="card-body text-center">
+                        <i class="fas fa-calendar-alt fa-3x mb-3"></i>
+                        <h5 class="card-title">Manage Time Off</h5>
+                        <p class="card-text">View and manage your time off</p>
+                        <a href="Time-off.html" class="btn btn-pink">View Time-Off History</a>
                     </div>
                 </div>
             </div>
