--- a/Time-off.html
+++ b/Time-off.html
@@ -33,7 +33,7 @@
             <!-- Container wrapper -->
             <div class="container-fluid">
                 <a class="navbar-brand" href="Clock-in-&-out.html">
-                    <img src="img/Logo.png" alt="Logo" width="300px" height="100px"
+                    <img src="img/Logo.png" alt="Logo" width="200px" height="100px"
                         class="d-inline-block align-text-top">
                 </a>
                 <!-- Toggle button -->
@@ -62,6 +62,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="Time-off.html"> Time Off </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Past-Time-off.html">Past Time-Off</a>
                         </li>
                     </ul>
                         <ul class="navbar-nav ms-auto">
@@ -97,7 +100,9 @@
 </div>
 
 <div class="clocks-container">
+    <div class="clock-in-container">
     <script type="text/javascript" src="https://c4aba502.caspio.com/dp/5a6ed00058fd0597c3e94db5bac6/emb"></script>
+</div>
 </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
