--- a/past-work-hours.html
+++ b/past-work-hours.html
@@ -33,7 +33,7 @@
             <!-- Container wrapper -->
             <div class="container-fluid">
                 <a class="navbar-brand" href="Overview.html">
-                    <img src="img/Logo.png" alt="Logo" width="300px" height="100px"
+                    <img src="img/Logo.png" alt="Logo" width="200px" height="100px"
                         class="d-inline-block align-text-top">
                 </a>
                 <!-- Toggle button -->
@@ -62,6 +62,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="Time-off.html"> Time Off </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Past-Time-off.html">Past Time-Off</a>
                         </li>
                     </ul>
                         <ul class="navbar-nav ms-auto">
