--- a/Overview.html
+++ b/Overview.html
@@ -129,7 +129,7 @@
             <div class="col-md-3 mb-4">
                 <div class="card h-100">
                     <div class="card-body text-center">
-                        <i class="fas fa-calendar-alt fa-3x mb-3"></i>
+                        <i class="fas fa-hourglass-end fa-3x mb-3"></i>
                         <h5 class="card-title">Past Time Off</h5>
                         <p class="card-text">View and manage your time off</p>
                         <a href="Time-off.html" class="btn btn-pink">View Time-Off History</a>
