--- a/Overview.html
+++ b/Overview.html
@@ -137,6 +137,15 @@
                 </div>
             </div>
         </div>
+        
+        <iframe 
+    src="https://app.slack.com/client/T0896EFLE14/C089RQ173KK" 
+    width="100%" 
+    height="600px" 
+    frameborder="0"
+    allowfullscreen>
+</iframe>
+
     </div>
 
     <!-- Bootstrap Scripts -->
