--- a/Time-off.html
+++ b/Time-off.html
@@ -101,7 +101,15 @@
 
 <div class="clocks-container">
     <div class="clock-in-container">
+        <div class="clock-in" id="clock-in">
+        <script type="text/javascript" src="https://c4aba502.caspio.com/dp/5a6ed00027445ae8c55f46539a46/emb"></script>
+    </div>
+    <span class="clock-out">
+        <script type="text/javascript" src="https://c4aba502.caspio.com/dp/5a6ed0000caf09b7acce4e719ea6/emb"></script>
+    </div>
+    <div class="clock-in-container">
     <script type="text/javascript" src="https://c4aba502.caspio.com/dp/5a6ed00058fd0597c3e94db5bac6/emb"></script>
+</div>
 </div>
 </div>
 
